// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Регионы/Вкладки Компонент 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        Регионы
      </li>
      <li
        className="breadcrumb-item active"
      >
        Вкладки
      </li>
      <li
        className="breadcrumb-item active"
      >
        Компонент
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "регионы-вкладки--компонент",
                        "kind": "Регионы/Вкладки",
                        "name": "Компонент",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\components\\\\regions\\\\Tabs\\\\Tabs.story.js",
                          "framework": "react",
                          "info": Object {
                            "propTablesExclude": Array [
                              [Function],
                              [Function],
                            ],
                            "text": "
      Компонент 'Табы'
      ~~~js
      import Tabs, Tab from 'n2o-framework/lib/components/regions/Tabs/Tabs';
      
      <Tabs>
        <Tab id=\\"one\\" title=\\"Один\\" active>
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Первый таб\\" />
          </div>
        </Tab>
        <Tab id=\\"two\\" title=\\"Два\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Второй таб\\" className=\\"d-10\\" />
          </div>
        </Tab>
        <Tab id=\\"three\\" title=\\"Три\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Третий таб\\" className=\\"l-10\\" />
          </div>
        </Tab>
      </Tabs>
      ~~~
      ",
                          },
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "Компонент",
                      }
                    }
                    excludedPropTypes={Array []}
                    info="
      Компонент 'Табы'
      ~~~js
      import Tabs, Tab from 'n2o-framework/lib/components/regions/Tabs/Tabs';
      
      <Tabs>
        <Tab id=\\"one\\" title=\\"Один\\" active>
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Первый таб\\" />
          </div>
        </Tab>
        <Tab id=\\"two\\" title=\\"Два\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Второй таб\\" className=\\"d-10\\" />
          </div>
        </Tab>
        <Tab id=\\"three\\" title=\\"Три\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Третий таб\\" className=\\"l-10\\" />
          </div>
        </Tab>
      </Tabs>
      ~~~
      "
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={Array []}
                    propTablesExclude={
                      Array [
                        [Function],
                        [Function],
                      ]
                    }
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <Tabs
                      onChangeActive={[Function]}
                    >
                      <Tab
                        active={true}
                        disabled={false}
                        id="one"
                        title="Один"
                        visible={true}
                      >
                        <div
                          style={
                            Object {
                              "height": 400,
                              "position": "relative",
                              "width": "100%",
                            }
                          }
                        >
                          <Wireframe
                            title="Первый таб"
                          />
                        </div>
                      </Tab>
                      <Tab
                        disabled={false}
                        id="two"
                        title="Два"
                        visible={true}
                      >
                        <div
                          style={
                            Object {
                              "height": 400,
                              "position": "relative",
                              "width": "100%",
                            }
                          }
                        >
                          <Wireframe
                            className="d-10"
                            title="Второй таб"
                          />
                        </div>
                      </Tab>
                      <Tab
                        disabled={false}
                        id="three"
                        title="Три"
                        visible={true}
                      >
                        <div
                          style={
                            Object {
                              "height": 400,
                              "position": "relative",
                              "width": "100%",
                            }
                          }
                        >
                          <Wireframe
                            className="l-10"
                            title="Третий таб"
                          />
                        </div>
                      </Tab>
                    </Tabs>
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;

exports[`Storyshots Регионы/Вкладки С иконками 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        Регионы
      </li>
      <li
        className="breadcrumb-item active"
      >
        Вкладки
      </li>
      <li
        className="breadcrumb-item active"
      >
        С иконками
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "регионы-вкладки--с-иконками",
                        "kind": "Регионы/Вкладки",
                        "name": "С иконками",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\components\\\\regions\\\\Tabs\\\\Tabs.story.js",
                          "framework": "react",
                          "info": Object {
                            "propTablesExclude": Array [
                              [Function],
                              [Function],
                            ],
                            "text": "
      Компонент 'Табы'
      ~~~js
      import Tabs, Tab from 'n2o-framework/lib/components/regions/Tabs/Tabs';
      
      <Tabs>
        <Tab id=\\"one\\" title=\\"Google\\" icon=\\"fa fa-google\\" active>
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Первый таб\\" />
          </div>
        </Tab>
        <Tab id=\\"two\\" title=\\"Facebook\\" icon=\\"fa fa-facebook\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Второй таб\\" />
          </div>
        </Tab>
        <Tab id=\\"three\\" title=\\"Amazon\\" icon=\\"fa fa-amazon\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Третий таб\\" />
          </div>
        </Tab>
      </Tabs>
      ~~~
      ",
                          },
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "С иконками",
                      }
                    }
                    excludedPropTypes={Array []}
                    info="
      Компонент 'Табы'
      ~~~js
      import Tabs, Tab from 'n2o-framework/lib/components/regions/Tabs/Tabs';
      
      <Tabs>
        <Tab id=\\"one\\" title=\\"Google\\" icon=\\"fa fa-google\\" active>
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Первый таб\\" />
          </div>
        </Tab>
        <Tab id=\\"two\\" title=\\"Facebook\\" icon=\\"fa fa-facebook\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Второй таб\\" />
          </div>
        </Tab>
        <Tab id=\\"three\\" title=\\"Amazon\\" icon=\\"fa fa-amazon\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Третий таб\\" />
          </div>
        </Tab>
      </Tabs>
      ~~~
      "
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={Array []}
                    propTablesExclude={
                      Array [
                        [Function],
                        [Function],
                      ]
                    }
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <Tabs
                      onChangeActive={[Function]}
                    >
                      <Tab
                        active={true}
                        disabled={false}
                        icon="fa fa-google"
                        id="one"
                        title="Google"
                        visible={true}
                      >
                        <div
                          style={
                            Object {
                              "height": 400,
                              "position": "relative",
                              "width": "100%",
                            }
                          }
                        >
                          <Wireframe
                            title="Первый таб"
                          />
                        </div>
                      </Tab>
                      <Tab
                        disabled={false}
                        icon="fa fa-facebook"
                        id="two"
                        title="Facebook"
                        visible={true}
                      >
                        <div
                          style={
                            Object {
                              "height": 400,
                              "position": "relative",
                              "width": "100%",
                            }
                          }
                        >
                          <Wireframe
                            title="Второй таб"
                          />
                        </div>
                      </Tab>
                      <Tab
                        disabled={false}
                        icon="fa fa-amazon"
                        id="three"
                        title="Amazon"
                        visible={true}
                      >
                        <div
                          style={
                            Object {
                              "height": 400,
                              "position": "relative",
                              "width": "100%",
                            }
                          }
                        >
                          <Wireframe
                            title="Третий таб"
                          />
                        </div>
                      </Tab>
                    </Tabs>
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;

exports[`Storyshots Регионы/Вкладки С отключенной вкладкой 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        Регионы
      </li>
      <li
        className="breadcrumb-item active"
      >
        Вкладки
      </li>
      <li
        className="breadcrumb-item active"
      >
        С отключенной вкладкой
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "регионы-вкладки--с-отключенной-вкладкой",
                        "kind": "Регионы/Вкладки",
                        "name": "С отключенной вкладкой",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\components\\\\regions\\\\Tabs\\\\Tabs.story.js",
                          "framework": "react",
                          "info": Object {
                            "propTablesExclude": Array [
                              [Function],
                              [Function],
                            ],
                            "text": "
      Компонент 'Табы'
      ~~~js
      import Tabs, Tab from 'n2o-framework/lib/components/regions/Tabs/Tabs';
      
      <Tabs>
        <Tab id=\\"one\\" title=\\"Один\\" active>
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Первый таб\\" />
          </div>
        </Tab>
        <Tab id=\\"two\\" title=\\"Два(этот таб отключен)\\" disabled>
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Второй таб\\" />
          </div>
        </Tab>
        <Tab id=\\"three\\" title=\\"Три\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Третий таб\\" />
          </div>
        </Tab>
      </Tabs>
      ~~~
      ",
                          },
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "С отключенной вкладкой",
                      }
                    }
                    excludedPropTypes={Array []}
                    info="
      Компонент 'Табы'
      ~~~js
      import Tabs, Tab from 'n2o-framework/lib/components/regions/Tabs/Tabs';
      
      <Tabs>
        <Tab id=\\"one\\" title=\\"Один\\" active>
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Первый таб\\" />
          </div>
        </Tab>
        <Tab id=\\"two\\" title=\\"Два(этот таб отключен)\\" disabled>
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Второй таб\\" />
          </div>
        </Tab>
        <Tab id=\\"three\\" title=\\"Три\\">
          <div style={{ width: '100%', height: 400, position: 'relative' }}>
            <Wireframe title=\\"Третий таб\\" />
          </div>
        </Tab>
      </Tabs>
      ~~~
      "
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={Array []}
                    propTablesExclude={
                      Array [
                        [Function],
                        [Function],
                      ]
                    }
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <Tabs
                      onChangeActive={[Function]}
                    >
                      <Tab
                        active={true}
                        disabled={false}
                        id="one"
                        title="Один"
                        visible={true}
                      >
                        <div
                          style={
                            Object {
                              "height": 400,
                              "position": "relative",
                              "width": "100%",
                            }
                          }
                        >
                          <Wireframe
                            title="Первый таб"
                          />
                        </div>
                      </Tab>
                      <Tab
                        disabled={true}
                        id="two"
                        title="Два(этот таб отключен)"
                        visible={true}
                      >
                        <div
                          style={
                            Object {
                              "height": 400,
                              "position": "relative",
                              "width": "100%",
                            }
                          }
                        >
                          <Wireframe
                            title="Второй таб"
                          />
                        </div>
                      </Tab>
                      <Tab
                        disabled={false}
                        id="three"
                        title="Три"
                        visible={true}
                      >
                        <div
                          style={
                            Object {
                              "height": 400,
                              "position": "relative",
                              "width": "100%",
                            }
                          }
                        >
                          <Wireframe
                            title="Третий таб"
                          />
                        </div>
                      </Tab>
                    </Tabs>
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;
